--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node . ",
     "start:dev": "node . --watch",
@@ -10,19 +11,31 @@
     "build:dev": "tsc -w",
     "test:dev": "jest --watch",
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
     "@types/debug": "^4.1.8",
+    "@types/lint-staged": "^13.2.0",
     "@types/node": "^20.5.6",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
     "debug": "^4.3.4",
+    "eslint": "^8.47.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-typescript": "^1.0.1",
     "express": "^4.18.2",
+    "husky": "^8.0.0",
+    "lint-staged": "^14.0.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "prettier": "^3.0.2"
   }
 }
