--- a/package.json
+++ b/package.json
@@ -1,41 +1,55 @@
 {
-  "name": "robositos-back",
+  "name": "ex1",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "start": "node . ",
-    "start:dev": "node . --watch",
+    "start:dev": "nodemon -q .",
     "build": "tsc",
     "build:dev": "tsc -w",
+    "prepare": "husky install",
     "test:dev": "jest --watch",
     "test": "jest",
-    "test:coverage": "jest --coverage",
-    "prepare": "husky install"
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
+    "@types/body-parser": "^1.19.2",
     "@types/debug": "^4.1.8",
-    "@types/lint-staged": "^13.2.0",
-    "@types/node": "^20.5.6",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "debug": "^4.3.4",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
+    "@types/morgan": "^1.9.4",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
     "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^1.0.1",
-    "express": "^4.18.2",
     "husky": "^8.0.0",
-    "lint-staged": "^14.0.1",
-    "typescript": "^5.2.2"
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.3",
+    "jest-ts-webcompat-resolver": "^1.0.0",
+    "mongodb-memory-server": "^8.15.1",
+    "mongoose": "^7.4.4",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
-    "@types/express": "^4.17.17",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/express-serve-static-core": "^4.17.36",
+    "@types/supertest": "^2.0.12",
+    "chalk": "^4.1.2",
+    "debug": "^4.3.4",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.0.1",
     "prettier": "^3.0.2"
   }
 }
