--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@types/body-parser": "^1.19.2",
     "@types/debug": "^4.1.8",
     "@types/express": "^4.17.17",
-    "@types/express-serve-static-core": "^4.17.36",
     "@types/jest": "^29.5.3",
     "@types/morgan": "^1.9.4",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
+    "cors": "^2.8.5",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-xo": "^0.43.1",
@@ -42,8 +43,9 @@
   "dependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
+    "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
-    "@types/supertest": "^2.0.12",
+    "@types/express-serve-static-core": "^4.17.36",
     "chalk": "^4.1.2",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
